// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BusinessCardList Component When provided with business list info Should render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BusinessCardList
    businesses={
      Array [
        Object {
          "categories": Array [
            Object {
              "alias": "delis",
              "title": "Delis",
            },
          ],
          "coordinates": Object {
            "latitude": 37.7983818054199,
            "longitude": -122.407821655273,
          },
          "id": "molinari-delicatessen-san-francisco",
          "image_url": "http://s3-media4.fl.yelpcdn.com/bphoto/6He-NlZrAv2mDV-yg6jW3g/o.jpg",
          "location": Object {
            "address1": "373 Columbus Ave",
            "address2": "",
            "address3": "",
            "city": "San Francisco",
            "country": "US",
            "state": "CA",
            "zip_code": "94133",
          },
          "name": "Molinari Delicatessen",
          "phone": "+14154212337",
          "price": "$$",
          "rating": 4.5,
          "review_count": 910,
          "url": "https://www.yelp.com/biz/molinari-delicatessen-san-francisco",
        },
        Object {
          "categories": Array [
            Object {
              "alias": "indpak",
              "title": "Indian",
            },
          ],
          "coordinates": Object {
            "latitude": null,
            "longitude": null,
          },
          "id": "north-india-restaurant-san-francisco",
          "image_url": "",
          "name": "North India Restaurant",
          "rating": 4,
          "review_count": 551,
          "url": "https://www.yelp.com/biz/north-india-restaurant-san-francisco",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="item"
          onClick={[Function]}
        >
          <BusinessCard
            business={
              Object {
                "categories": Array [
                  Object {
                    "alias": "delis",
                    "title": "Delis",
                  },
                ],
                "coordinates": Object {
                  "latitude": 37.7983818054199,
                  "longitude": -122.407821655273,
                },
                "id": "molinari-delicatessen-san-francisco",
                "image_url": "http://s3-media4.fl.yelpcdn.com/bphoto/6He-NlZrAv2mDV-yg6jW3g/o.jpg",
                "location": Object {
                  "address1": "373 Columbus Ave",
                  "address2": "",
                  "address3": "",
                  "city": "San Francisco",
                  "country": "US",
                  "state": "CA",
                  "zip_code": "94133",
                },
                "name": "Molinari Delicatessen",
                "phone": "+14154212337",
                "price": "$$",
                "rating": 4.5,
                "review_count": 910,
                "url": "https://www.yelp.com/biz/molinari-delicatessen-san-francisco",
              }
            }
          />
        </div>,
        <div
          className="item"
          onClick={[Function]}
        >
          <BusinessCard
            business={
              Object {
                "categories": Array [
                  Object {
                    "alias": "indpak",
                    "title": "Indian",
                  },
                ],
                "coordinates": Object {
                  "latitude": null,
                  "longitude": null,
                },
                "id": "north-india-restaurant-san-francisco",
                "image_url": "",
                "name": "North India Restaurant",
                "rating": 4,
                "review_count": 551,
                "url": "https://www.yelp.com/biz/north-india-restaurant-san-francisco",
              }
            }
          />
        </div>,
      ],
      "className": "business-card-list",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "molinari-delicatessen-san-francisco",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <BusinessCard
              business={
                Object {
                  "categories": Array [
                    Object {
                      "alias": "delis",
                      "title": "Delis",
                    },
                  ],
                  "coordinates": Object {
                    "latitude": 37.7983818054199,
                    "longitude": -122.407821655273,
                  },
                  "id": "molinari-delicatessen-san-francisco",
                  "image_url": "http://s3-media4.fl.yelpcdn.com/bphoto/6He-NlZrAv2mDV-yg6jW3g/o.jpg",
                  "location": Object {
                    "address1": "373 Columbus Ave",
                    "address2": "",
                    "address3": "",
                    "city": "San Francisco",
                    "country": "US",
                    "state": "CA",
                    "zip_code": "94133",
                  },
                  "name": "Molinari Delicatessen",
                  "phone": "+14154212337",
                  "price": "$$",
                  "rating": 4.5,
                  "review_count": 910,
                  "url": "https://www.yelp.com/biz/molinari-delicatessen-san-francisco",
                }
              }
            />,
            null,
          ],
          "className": "item",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "business": Object {
                "categories": Array [
                  Object {
                    "alias": "delis",
                    "title": "Delis",
                  },
                ],
                "coordinates": Object {
                  "latitude": 37.7983818054199,
                  "longitude": -122.407821655273,
                },
                "id": "molinari-delicatessen-san-francisco",
                "image_url": "http://s3-media4.fl.yelpcdn.com/bphoto/6He-NlZrAv2mDV-yg6jW3g/o.jpg",
                "location": Object {
                  "address1": "373 Columbus Ave",
                  "address2": "",
                  "address3": "",
                  "city": "San Francisco",
                  "country": "US",
                  "state": "CA",
                  "zip_code": "94133",
                },
                "name": "Molinari Delicatessen",
                "phone": "+14154212337",
                "price": "$$",
                "rating": 4.5,
                "review_count": 910,
                "url": "https://www.yelp.com/biz/molinari-delicatessen-san-francisco",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "north-india-restaurant-san-francisco",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <BusinessCard
              business={
                Object {
                  "categories": Array [
                    Object {
                      "alias": "indpak",
                      "title": "Indian",
                    },
                  ],
                  "coordinates": Object {
                    "latitude": null,
                    "longitude": null,
                  },
                  "id": "north-india-restaurant-san-francisco",
                  "image_url": "",
                  "name": "North India Restaurant",
                  "rating": 4,
                  "review_count": 551,
                  "url": "https://www.yelp.com/biz/north-india-restaurant-san-francisco",
                }
              }
            />,
            null,
          ],
          "className": "item",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "business": Object {
                "categories": Array [
                  Object {
                    "alias": "indpak",
                    "title": "Indian",
                  },
                ],
                "coordinates": Object {
                  "latitude": null,
                  "longitude": null,
                },
                "id": "north-india-restaurant-san-francisco",
                "image_url": "",
                "name": "North India Restaurant",
                "rating": 4,
                "review_count": 551,
                "url": "https://www.yelp.com/biz/north-india-restaurant-san-francisco",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="item"
            onClick={[Function]}
          >
            <BusinessCard
              business={
                Object {
                  "categories": Array [
                    Object {
                      "alias": "delis",
                      "title": "Delis",
                    },
                  ],
                  "coordinates": Object {
                    "latitude": 37.7983818054199,
                    "longitude": -122.407821655273,
                  },
                  "id": "molinari-delicatessen-san-francisco",
                  "image_url": "http://s3-media4.fl.yelpcdn.com/bphoto/6He-NlZrAv2mDV-yg6jW3g/o.jpg",
                  "location": Object {
                    "address1": "373 Columbus Ave",
                    "address2": "",
                    "address3": "",
                    "city": "San Francisco",
                    "country": "US",
                    "state": "CA",
                    "zip_code": "94133",
                  },
                  "name": "Molinari Delicatessen",
                  "phone": "+14154212337",
                  "price": "$$",
                  "rating": 4.5,
                  "review_count": 910,
                  "url": "https://www.yelp.com/biz/molinari-delicatessen-san-francisco",
                }
              }
            />
          </div>,
          <div
            className="item"
            onClick={[Function]}
          >
            <BusinessCard
              business={
                Object {
                  "categories": Array [
                    Object {
                      "alias": "indpak",
                      "title": "Indian",
                    },
                  ],
                  "coordinates": Object {
                    "latitude": null,
                    "longitude": null,
                  },
                  "id": "north-india-restaurant-san-francisco",
                  "image_url": "",
                  "name": "North India Restaurant",
                  "rating": 4,
                  "review_count": 551,
                  "url": "https://www.yelp.com/biz/north-india-restaurant-san-francisco",
                }
              }
            />
          </div>,
        ],
        "className": "business-card-list",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "molinari-delicatessen-san-francisco",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <BusinessCard
                business={
                  Object {
                    "categories": Array [
                      Object {
                        "alias": "delis",
                        "title": "Delis",
                      },
                    ],
                    "coordinates": Object {
                      "latitude": 37.7983818054199,
                      "longitude": -122.407821655273,
                    },
                    "id": "molinari-delicatessen-san-francisco",
                    "image_url": "http://s3-media4.fl.yelpcdn.com/bphoto/6He-NlZrAv2mDV-yg6jW3g/o.jpg",
                    "location": Object {
                      "address1": "373 Columbus Ave",
                      "address2": "",
                      "address3": "",
                      "city": "San Francisco",
                      "country": "US",
                      "state": "CA",
                      "zip_code": "94133",
                    },
                    "name": "Molinari Delicatessen",
                    "phone": "+14154212337",
                    "price": "$$",
                    "rating": 4.5,
                    "review_count": 910,
                    "url": "https://www.yelp.com/biz/molinari-delicatessen-san-francisco",
                  }
                }
              />,
              null,
            ],
            "className": "item",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "business": Object {
                  "categories": Array [
                    Object {
                      "alias": "delis",
                      "title": "Delis",
                    },
                  ],
                  "coordinates": Object {
                    "latitude": 37.7983818054199,
                    "longitude": -122.407821655273,
                  },
                  "id": "molinari-delicatessen-san-francisco",
                  "image_url": "http://s3-media4.fl.yelpcdn.com/bphoto/6He-NlZrAv2mDV-yg6jW3g/o.jpg",
                  "location": Object {
                    "address1": "373 Columbus Ave",
                    "address2": "",
                    "address3": "",
                    "city": "San Francisco",
                    "country": "US",
                    "state": "CA",
                    "zip_code": "94133",
                  },
                  "name": "Molinari Delicatessen",
                  "phone": "+14154212337",
                  "price": "$$",
                  "rating": 4.5,
                  "review_count": 910,
                  "url": "https://www.yelp.com/biz/molinari-delicatessen-san-francisco",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            null,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "north-india-restaurant-san-francisco",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <BusinessCard
                business={
                  Object {
                    "categories": Array [
                      Object {
                        "alias": "indpak",
                        "title": "Indian",
                      },
                    ],
                    "coordinates": Object {
                      "latitude": null,
                      "longitude": null,
                    },
                    "id": "north-india-restaurant-san-francisco",
                    "image_url": "",
                    "name": "North India Restaurant",
                    "rating": 4,
                    "review_count": 551,
                    "url": "https://www.yelp.com/biz/north-india-restaurant-san-francisco",
                  }
                }
              />,
              null,
            ],
            "className": "item",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "business": Object {
                  "categories": Array [
                    Object {
                      "alias": "indpak",
                      "title": "Indian",
                    },
                  ],
                  "coordinates": Object {
                    "latitude": null,
                    "longitude": null,
                  },
                  "id": "north-india-restaurant-san-francisco",
                  "image_url": "",
                  "name": "North India Restaurant",
                  "rating": 4,
                  "review_count": 551,
                  "url": "https://www.yelp.com/biz/north-india-restaurant-san-francisco",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            null,
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`BusinessCardList Component When provided with no info Should render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BusinessCardList />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": null,
      "className": "business-card-list",
    },
    "ref": null,
    "rendered": null,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": null,
        "className": "business-card-list",
      },
      "ref": null,
      "rendered": null,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
